--- a/css/styles.scss
+++ b/css/styles.scss
@@ -71,3 +71,16 @@ body {
   bottom: 0px;
   z-index: 1;
 }
+
+.modal-header {
+  background-color: $background-dark;
+  .modal-title {
+    color: floralwhite;
+  }
+  button {
+    color: floralwhite;
+  }
+}
+.modal-body {
+  background-color: $background-pale;
+}
